# lantern-city

./: .gitignore  README.md  build.md  gang-city.json  generate_city.py  lantern-city-tui.spec  lantern-city.profiles.json  lantern-city.spec  pyproject.toml  validate_city.py
.claude/: settings.json
.pytest_tmp_faction_operations_regression/test_cli_defaults_to_generated0/: lantern-city.json
.pytest_tmp_profile_configs/test_cli_persists_startup_mode0/: lantern-city.json
.pytest_tmp_profile_configs/test_cli_prompt_check_renders_0/: lantern-city.json  prompt-check.json
.pytest_tmp_profile_configs/test_save_llm_config_persists_0/: lantern-city.json
.pytest_tmp_shared_profiles/test_load_llm_profiles_support0/: legacy.json
.pytest_tmp_startup_boundary_cli/test_cli_startup_mode_can_forc0/: lantern-city.json
.pytest_tmp_targeted_routes_regression/test_cli_startup_mode_can_forc0/: lantern-city.json
docs/: playtest-checklist.md  playtest-issues.md
docs/design/: README.md
src/lantern_city/: active_slice.py  app.py  background.py  (+24 more)
tests/: test_active_slice.py  test_app.py  test_background.py  test_bootstrap.py  test_cache.py  test_cases.py  test_city_seed_generation.py  test_cli.py  test_clues.py  test_district_generation.py  test_end_to_end.py  test_engine.py  test_factions.py  test_game_master.py  test_lanterns.py  test_llm_client.py  test_models.py  test_npc_response.py  test_orchestrator.py  test_progression.py  test_response.py  test_seed_schema.py  test_serialization.py  test_simulation.py  test_social.py  test_store.py  test_transients.py  test_tui.py
(+81 files in other folders)
